2014-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* fileio.c (CHECK_LENGTH): New macro.
	(Fexpand_file_name): Use it and get rid of a few more calls
	to strlen and strcat.

2014-09-01  Dmitry Antipov  <dmantipov@yandex.ru>

	Avoid extra calls to strlen in filesystem I/O routines.
	* fileio.c (Fexpand_file_name): Avoid calls to strlen if
	the length of 'newdir' is known or may be precalculated.
	(file_accessible_directory_p): Prefer to pass Lisp_Object,
	not 'char *', and so use precalculated length.
	(Ffile_accessible_directory_p):
	* callproc.c (encode_current_directory, init_callproc):
	* charset.c (init_charset):
	* lread.c (load_path_check, load_path_default): Adjust users.
	* lisp.h (file_accessible_directory_p): Tweak prototype.

2014-09-01  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (w32_compare_strings): Support "C" and "POSIX"
	locales.

2014-09-01  Paul Eggert  <eggert@cs.ucla.edu>

	--enable-silent-rules now suppresses more chatter.
	* Makefile.in (AM_DEFAULT_VERBOSITY, AM_V_CC, am__v_CC_)
	(am__v_CC_0, am__v_CC_1, AM_V_CCLD, am__v_CCLD_, am__v_CCLD_0)
	(am__v_CCLD_1): New macros, taken from Automake.
	(.c.o, .m.o, temacs$(EXEEXT)): Use them.

	Clean up extern decls a bit.
	* bytecode.c: Include blockinput.h and keyboard.h rather
	than rolling their APIs by hand.
	* emacs.c: Include regex.h and rely on its and lisp.h's API
	rather than rolling them by hand.
	* lastfile.c: Include lisp.h, to check this file's API.
	* lisp.h (lisp_eval_depth, my_edata, my_endbss, my_endbss_static):
	New decls.
	* regex.h (re_max_failures): New decl.
	* unexcw.c, unexmacosx.c, unexw32.c:
	Rely on lisp.h's API rather than rolling it by hand.
	* vm-limit.c (__after_morecore_hook, __morecore, real_morecore):
	Declare at top level, to pacify GCC -Wnested-externs.

2014-08-31  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (get_glyph_string_clip_rects): Don't let the width of a
	clipping rectangle become negative (i.e. large positive, since